Fix bib / code layout bug (#3387)
Resolve #3370
Resolve #3380

Based on the
[comment](https://github.com/alshedivat/al-folio/issues/3370#issuecomment-3565962058)
of @MarkusThill, I created a bugfix that solved the issue on my website.
Hope that fixes it in general; thus the PR :) However, I'm not an expert
for scss .. so handle with care :)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -891,6 +891,7 @@ pre {
     border-radius: 0;
     margin-bottom: 0;
     padding: 0;
+    white-space: inherit;
   }
 }
 
